#13714 - Article Hero Image not showing properly - Final Mobile layout fix

--- a/docroot/sites/all/themes/custom/mmorpg/css/mmorpg.styles.css
+++ b/docroot/sites/all/themes/custom/mmorpg/css/mmorpg.styles.css
@@ -237,7 +237,7 @@ body {
 .node-type-mmorpg-article .field--name-field-article-news-post {
   font-size: 14px;
   line-height: 1.6em;
-  margin: 0px 30px;
+  margin: 0 auto;
   top: -40px;
   margin-bottom: -40px;
   padding: 20px;
